--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,20 @@
+# Exclude IDE and environment files
 .idea/
-
 .venv/
-
 .DS_Store
 
+# Python cache files
 __pycache__/
 *.pyc
 *.pyo
 
-**/train_resized/
-**/test_resized/
-
-*.npy
+# Exclude resized datasets
 train_resized/
-test_resized/qu
+test_resized/
+
+# Exclude all .npy files globally and specifically in datasets
+*.npy
+FER2013/*.npy
+KDEF/*.npy
+Mixed/*.npy
+Natural_Human_Face_Images/*.npy
